# abax

./: Dockerfile.gateway  Makefile  docker-compose.yml  pyproject.toml
agent/: cli.py  loop.py
agent-legacy/: __main__.py  models.py  prompts.py  server.py  session.py  store.py  tools.py
agent-legacy/api/: chat.py  main.py  sessions.py
agent-legacy/core/: orchestrator.py  sandbox_mgr.py
agent-legacy/legacy/: README.md  agent.py  llm_proxy.py  models.py  session_store.py
agent-ts/: package-lock.json  package.json
agent-ts/src/: agent.ts  index.ts  infra-client.test.ts  infra-client.ts  prompts.test.ts  prompts.ts  (+4 more)
docs/: agent-layer-research.md  architecture-evolution.md  competitive-analysis.md  deployment-checklist.md  infra-gaps.md  infra-status-report.md  manus-analysis-and-roadmap.md
gateway/: auth.py  browser.py  context.py  daemon.py  events.py  executor.py  files.py  gc.py  main.py  metrics.py  models.py  pool.py  recovery.py  sandbox.py  store.py  terminal.py
infra/: logging_config.py  models.py
sandbox-image/: Dockerfile  browser_server.py  sandbox_server.py
scripts/: demo.py  demo_agent.py
sdk/: __init__.py  browser.py  files.py  sandbox.py
tests/: conftest.py  test_agent_turn.py  test_async.py  test_auth.py  test_daemon.py  test_events.py  test_exec_timeout.py  test_files_extended.py  test_gateway.py  test_gc.py  test_health.py  test_lifecycle.py  test_limits.py  test_metrics.py  test_pause.py  test_pool.py  test_recovery.py  test_sdk.py  test_session.py  test_store.py  test_stress.py  test_stress_multitenant.py  test_stress_vps.py
(+50 files in other folders)
